--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -32,7 +32,7 @@
             <section class="nav-main">
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
-                    <a href="#link-about" class="about-link" title="前往首頁的關於我們">
+                    <a href="./index.html#link-about" class="about-link" title="前往首頁的關於我們">
                         <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
@@ -49,7 +49,7 @@
                         </div>
                     </a>
                     <!----------------------------- 產品經銷 ------------------------------------>
-                    <a href="#link-distribution" class="distribution-link" title="前往首頁的產品經銷">
+                    <a href="./distribution.html" class="distribution-link" title="前往產品經銷頁">
                         <div class="distribution">
                             <div class="main-menu-img">
                                 <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
@@ -64,7 +64,7 @@
                         </div>
                     </a>
                     <!----------------------------- 熱門經典 ------------------------------------>
-                    <a href="#link-classic" class="classic-link" title="前往首頁的熱門經典">
+                    <a href="./index.html#link-classic" class="classic-link" title="前往首頁的熱門經典">
                         <div class="classic">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -79,7 +79,7 @@
                         </div>
                     </a>
                     <!----------------------------- 媒體露出 ------------------------------------>
-                    <a href="#link-media" class="media-link" title="前往首頁的媒體露出">
+                    <a href="./index.html#link-media" class="media-link" title="前往首頁的媒體露出">
                         <div class="media">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
@@ -93,7 +93,7 @@
                         </div>
                     </a>
                     <!----------------------------- 加盟專區 ------------------------------------>
-                    <a href="#link-franchisee" class="franchisee-link" title="前往首頁的加盟專區">
+                    <a href="./franchisee.html" class="franchisee-link" title="前往加盟專區頁">
                         <div class="franchisee">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
@@ -172,8 +172,8 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 產品經銷 ------------------------------------>
-                                <a href="#link-distribution" id="drop-distribution" title="前往首頁的產品經銷">
-                                    <div class="menu-distribution">
+                                <a href="./distribution.html" id="drop-distribution" title="前往首頁的銷">
+頁                                    <div class="menu-distribution">
                                         <div class="distribution-img">
                                             <img class="main-menu-distribution"
                                                 src="./frontend-img/header-img/distribution.png"
@@ -220,8 +220,8 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 加盟專區 ------------------------------------>
-                                <a href="#link-franchisee" id="drop-franchisee" title="前往首頁的加盟專區">
-                                    <div class="menu-franchisee">
+                                <a href="./franchisee.html" id="drop-franchisee" title="前往首頁的區">
+頁                                    <div class="menu-franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee"
                                                 src="./frontend-img/header-img/franchisee.png" alt="franchisee-icon">
