--- a/franchisee.html
+++ b/franchisee.html
@@ -29,7 +29,7 @@
             <section class="nav-main">
                 <section class="main-menu">
                     <!----------------------------- 關於我們 ------------------------------------>
-                    <a href="#link-about" class="about-link" title="前往首頁的關於我們">
+                    <a href="./index.html#link-about" class="about-link" title="前往首頁的關於我們">
                         <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
@@ -46,7 +46,7 @@
                         </div>
                     </a>
                     <!----------------------------- 產品經銷 ------------------------------------>
-                    <a href="#link-distribution" class="distribution-link" title="前往首頁的產品經銷">
+                    <a href="./distribution.html" class="distribution-link" title="前往產品經銷頁">
                         <div class="distribution">
                             <div class="main-menu-img">
                                 <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
@@ -61,7 +61,7 @@
                         </div>
                     </a>
                     <!----------------------------- 熱門經典 ------------------------------------>
-                    <a href="#link-classic" class="classic-link" title="前往首頁的熱門經典">
+                    <a href="./index.html#link-classic" class="classic-link" title="前往首頁的熱門經典">
                         <div class="classic">
                             <div class="main-menu-img">
                                 <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -76,7 +76,7 @@
                         </div>
                     </a>
                     <!----------------------------- 媒體露出 ------------------------------------>
-                    <a href="#link-media" class="media-link" title="前往首頁的媒體露出">
+                    <a href="./index.html#link-media" class="media-link" title="前往首頁的媒體露出">
                         <div class="media">
                             <div class="main-menu-img">
                                 <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
@@ -90,7 +90,7 @@
                         </div>
                     </a>
                     <!----------------------------- 加盟專區 ------------------------------------>
-                    <a href="#link-franchisee" class="franchisee-link" title="前往首頁的加盟專區">
+                    <a href="./franchisee.html" class="franchisee-link" title="前往加盟專區頁">
                         <div class="franchisee">
                             <div class="main-menu-img">
                                 <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
@@ -154,7 +154,7 @@
                         <div class="flex-mine-menu">
                             <div class="top-mine-menu">
                                 <!----------------------------- 關於我們 ------------------------------------>
-                                <a href="#link-about" id="drop-about" title="前往首頁的關於我們">
+                                <a href="./index.html#link-about" id="drop-about" title="前往首頁的關於我們">
                                     <div class="menu-about">
                                         <div class="about-img">
                                             <img class="main-menu-about" src="./frontend-img/header-img/about.png"
@@ -169,7 +169,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 產品經銷 ------------------------------------>
-                                <a href="#link-distribution" id="drop-distribution" title="前往首頁的產品經銷">
+                                <a href="./distribution.html" id="drop-distribution" title="前往產品經銷頁">
                                     <div class="menu-distribution">
                                         <div class="distribution-img">
                                             <img class="main-menu-distribution"
@@ -186,7 +186,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 熱門經典 ------------------------------------>
-                                <a href="#link-classic" id="drop-classic" title="前往首頁的熱門經典">
+                                <a href="./index.html#link-classic" id="drop-classic" title="前往首頁的熱門經典">
                                     <div class="menu-classic">
                                         <div class="classic-img">
                                             <img class="main-menu-classic" src="./frontend-img/header-img/classic.png"
@@ -202,7 +202,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 媒體露出 ------------------------------------>
-                                <a href="#link-media" id="drop-media" title="前往首頁的媒體露出">
+                                <a href="./index.html#link-media" id="drop-media" title="前往首頁的媒體露出">
                                     <div class="menu-media">
                                         <div class="media-img">
                                             <img class="main-menu-media" src="./frontend-img/header-img/media.png"
@@ -217,7 +217,7 @@
                                     </div>
                                 </a>
                                 <!----------------------------- 加盟專區 ------------------------------------>
-                                <a href="#link-franchisee" id="drop-franchisee" title="前往首頁的加盟專區">
+                                <a href="./franchisee.html" id="drop-franchisee" title="前往加盟專區頁">
                                     <div class="menu-franchisee">
                                         <div class="franchisee-img">
                                             <img class="main-menu-franchisee"
